Meeting with attachment cannot be saved in 2010
When I add an attachment to meeting with 2010 exchange server.
Error: Cannot create calendar object. The send or update operation could not be performed because the change key passed in the request does not match the current change key for the item.
3.28.5
Edited by Milan Crha