I#21 - Meeting with attachment cannot be saved in 2010

Closes https://gitlab.gnome.org/GNOME/evolution-ews/issues/21